--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -22,11 +22,18 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           
+      - name: Create virtual environment
+        run: uv venv
+          
       - name: Install dependencies
-        run: uv pip install -e ".[dev]"
+        run: |
+          source .venv/bin/activate
+          uv pip install -e ".[dev]"
         
       - name: Run ruff
-        run: ruff check .
+        run: |
+          source .venv/bin/activate
+          ruff check .
 
   publish:
     needs: lint
@@ -45,11 +52,18 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
           
+      - name: Create virtual environment
+        run: uv venv
+          
       - name: Build package
-        run: uv build
+        run: |
+          source .venv/bin/activate
+          uv build
         
       - name: Publish to PyPI
-        run: uv publish
+        run: |
+          source .venv/bin/activate
+          uv publish
         env:
           UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
           
