Update CI with ruff

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           source .venv/bin/activate
           uv pip install -e ".[dev]"
-        
+          uv pip install ruff
+          
       - name: Run ruff
         run: |
           source .venv/bin/activate
