--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.1.0"
+version = "0.1.3"
 description = "A CLI utility to poll dbt Cloud jobs and send macOS notifications"
+readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "requests==2.31.0",
@@ -20,6 +21,7 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 package-dir = {"" = "src"}
 py-modules = ["dbt_heartbeat"]
+packages = ["utils"]
 
 [dependency-groups]
 dev = [
