--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.1.2"
+version = "0.1.4"
 description = "A CLI utility to poll dbt Cloud jobs and send macOS notifications"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -9,6 +9,7 @@ dependencies = [
     "python-dotenv==1.0.0",
     "rich==13.7.0",
     "pync",
+    "tomli>=2.0.0; python_version < '3.11'",
 ]
 
 [project.scripts]
@@ -21,6 +22,7 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 package-dir = {"" = "src"}
 py-modules = ["dbt_heartbeat"]
+packages = ["utils"]
 
 [dependency-groups]
 dev = [
