--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.1.6"
+version = "0.1.7"
 description = "A CLI utility to poll dbt Cloud jobs and send macOS notifications"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -8,7 +8,7 @@ dependencies = [
     "requests==2.31.0",
     "python-dotenv==1.0.0",
     "rich==13.7.0",
-    "pync",
+    "pync==2.0.3",
     "tomli>=2.0.0; python_version < '3.11'",
 ]
 
@@ -27,4 +27,5 @@ packages = ["utils"]
 [dependency-groups]
 dev = [
     "ruff>=0.11.9",
+    "setuptools>=75.3.2",
 ]
