--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -3,8 +3,14 @@ name: CI/CD
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'pyproject.toml'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'pyproject.toml'
 
 jobs:
   ci-version-check:
