--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.1.14"
+version = "0.1.15"
 description = "A CLI tool to monitor individual dbt Cloud run jobs and receive macOS notifications when they complete."
-readme = "README.md"
 requires-python = ">=3.8"
 authors = [
     {name = "Jairus Martinez", email = "jairusmartinez@gmail.com"}
 ]
+urls = {"Source" = "https://github.com/jairus-m/dbt-heartbeat"}
+readme = "README.md"
 license = "MIT"
 keywords = ["dbt", "dbt-cloud", "cli", "notifications"]
 classifiers = [
@@ -28,7 +29,14 @@ dependencies = [
     "pync==2.0.3",
     "tomli>=2.0.0; python_version < '3.11'",
 ]
-urls = {"Source" = "https://github.com/jairus-m/dbt-heartbeat"}
+
+[dependency-groups]
+dev = [
+    "pre-commit>=3.5.0",
+    "ruff>=0.11.9",
+    "setuptools>=75.3.2",
+]
+
 
 [project.scripts]
 dh = "dbt_heartbeat:main"
@@ -42,9 +50,7 @@ package-dir = {"" = "src"}
 py-modules = ["dbt_heartbeat"]
 packages = ["utils"]
 
-[dependency-groups]
-dev = [
-    "pre-commit>=3.5.0",
-    "ruff>=0.11.9",
-    "setuptools>=75.3.2",
-]
+[tool.ruff]
+extend-include = ["*.toml"]
+
+
