--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.1.15"
+version = "0.1.16"
 description = "A CLI tool to monitor individual dbt Cloud run jobs and receive macOS notifications when they complete."
 requires-python = ">=3.8"
 authors = [
@@ -15,19 +15,13 @@ classifiers = [
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Operating System :: MacOS",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 dependencies = [
     "requests==2.31.0",
-    "python-dotenv==1.0.0", 
+    "python-dotenv==1.0.0",
     "rich==13.7.0",
     "pync==2.0.3",
-    "tomli>=2.0.0; python_version < '3.11'",
 ]
 
 [dependency-groups]
@@ -39,7 +33,7 @@ dev = [
 
 
 [project.scripts]
-dh = "dbt_heartbeat:main"
+dh = "dbt_heartbeat.main:main"
 
 [build-system]
 requires = ["setuptools>=61.0"]
@@ -47,8 +41,15 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-py-modules = ["dbt_heartbeat"]
-packages = ["utils"]
+packages = [
+    "dbt_heartbeat",
+    "utils",
+    "utils.api",
+    "utils.display",
+    "utils.notifications",
+    "utils.config",
+    "utils.version"
+]
 
 [tool.ruff]
 extend-include = ["*.toml"]
