--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.1.16"
+version = "0.1.17"
 description = "A CLI tool to monitor individual dbt Cloud run jobs and receive macOS notifications when they complete."
 requires-python = ">=3.8"
 authors = [
@@ -27,6 +27,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pre-commit>=3.5.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=5.0.0",
     "ruff>=0.11.9",
     "setuptools>=75.3.2",
 ]
@@ -51,7 +53,20 @@ packages = [
     "utils.version"
 ]
 
-[tool.ruff]
-extend-include = ["*.toml"]
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+
+[tool.coverage.run]
+source = ["src"]
+omit = [
+    "tests/*",
+    "**/__init__.py"
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "if __name__ == .__main__.:"
+]
 
 
