--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "dbt-heartbeat"
-version = "0.2.0"
-description = "A CLI tool to monitor individual dbt Cloud run jobs and receive macOS notifications when they complete."
+version = "0.2.1"
+description = "A CLI tool to monitor individual dbt Cloud run jobs and receive OS notifications when they complete."
 requires-python = ">=3.8"
 authors = [
     {name = "Jairus Martinez", email = "jairusmartinez@gmail.com"}
